Fix math scrollbars

--- a/css/default.css
+++ b/css/default.css
@@ -58,7 +58,7 @@ main {
 
 @media only screen and (min-width: 768px) {
   .container {
-    max-width: 720px;
+    max-width: 740px;
   }
 }
 
