--- a/css/nav_bar.css
+++ b/css/nav_bar.css
@@ -49,6 +49,7 @@
   display: inline-block;
   height: 48px;
   width: 48px;
+  max-width: 48px;
   transition: transform 0.3s, opacity 0.3s;
 }
 
